--- a/AGDPMS.Shared/Components/Production/Orders/OrderDetails.razor
+++ b/AGDPMS.Shared/Components/Production/Orders/OrderDetails.razor
@@ -293,7 +293,7 @@
                 <thead class="table-light">
                     <tr>
                         <th>Mã</th>
-                        <th>Cavity</th>
+                        <th>Bản thiết kế</th>
                         <th>Trạng thái</th>
                         <th>Kế hoạch</th>
                         <th>Thực tế</th>
