--- a/AGDPMS.Shared/Components/Layout/MainLayout.razor
+++ b/AGDPMS.Shared/Components/Layout/MainLayout.razor
@@ -60,7 +60,7 @@
         <AuthorizeView Roles="Director">
             <li class="nav-item">
                 <NavLink href="/accounts" Match="NavLinkMatch.All" class="nav-link text-white">
-                    <i class="bi bi-speedometer2 me-2"></i>
+                    <i class="bi bi-person me-2"></i>
                     <span>Tài khoản</span>
                 </NavLink>
             </li>
