--- a/AGDPMS.Shared/Components/Sale/SaleDetail.razor
+++ b/AGDPMS.Shared/Components/Sale/SaleDetail.razor
@@ -4,7 +4,8 @@
 @using AGDPMS.Shared.Models
 @using AGDPMS.Shared.Services
 @using Microsoft.AspNetCore.Authorization
-@attribute [Authorize(Roles = "Sale")] 
+@using Microsoft.AspNetCore.Components.Authorization
+@attribute [Authorize(Roles = "Sale,Director")] 
 @inject NavigationManager NavManager
 @inject ISaleServices SaleService
 
@@ -36,9 +37,11 @@ else
             </dl>
         </div>
         <div class="card-footer">
-            <button class="btn btn-primary me" @onclick="() => GoToEdit(client.Id)">
-                <i class="bx bx-edit-alt me-1"></i> Sửa
-            </button>
+            <AuthorizeView Roles="Sale">
+                <button class="btn btn-primary me" @onclick="() => GoToEdit(client.Id)">
+                    <i class="bx bx-edit-alt me-1"></i> Sửa
+                </button>
+            </AuthorizeView>
             <button class="btn btn-outline-secondary" @onclick="GoBack">
                 <i class="bx bx-arrow-back me"></i> Quay lại
             </button>
